k8s/base/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: afterlight-api
  namespace: afterlight-staging
spec:
  replicas: 2
  selector:
    matchLabels: { app: afterlight-api }
  template:
    metadata:
      labels: { app: afterlight-api }
    spec:
      containers:
        - name: api
          image: ghcr.io/grayhex/afterlight-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
